# skribbliogen

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
src/skribbliogen/: __main__.py  arg_parser.py  entities.py  validators.py
